# PY-Indexer

./: PY-Indexer-structure.txt  example-location-v3.json  index-extension-spec.md  schema_analysis.json  tech-index-v3-schema.json
index/: .gitignore  tech-comments-mini.json  tech-comments.json  tech-docstrings-mini.json  tech-docstrings.json  tech-index-mini.json  tech-index.json  tech-location-mini.json  tech-location.json
old/indexer/: TECH-INDEX-PY-v2.1-schema.json  run.bat  run.md  run_BL.bat  tech_index_generator_v3.py
old/location/: LOCATION-EXAMPLES-v2.txt  TECH-LOCATION-v2-SPEC.md  location_index_builder_v2.py  run.bat  run_BL.bat  tech-location-schema-v2.json
specification/: example-index-v3.json  tech-location-v3-schema.json
specification/v3.1/: EXAMPLES-v3.1.md  tech-comments-v3.1-schema.json  tech-docstrings-v3.1-schema.json  tech-index-v3.1-schema.json  (+1 more)
specification/v4.0/: v4.1.md  (+16 more)
src/: ARCHITECTURE.md  README.md  README.v.3.1.md  config.example.yaml  config_loader.py  index-codeguard-full.bat  index-codeguard-simple.bat  index-codeguard.bat  indexer.py  main.py  parser.py  py-indexr-self-index.bat  pyproject.toml  requirements.txt  setup-structure.bat  src-structure.txt  validator.py
src/builders/: builder_comments.py  builder_docstrings.py  builder_location.py  builder_tech_index.py
src/cli/: cli_index.py  cli_location.py
src/serializers/: serializer_base.py  serializer_json.py  serializer_msgpack.py
src/utils/: utils_file.py  utils_hash.py  utils_logger.py
src/viewers/: template_static_html.html  viewer_index.py  viewer_static_html.py
(+1 files in other folders)
